<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="top"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/whith"
        android:padding="16dp"

        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="5dp"
            android:text="@string/nome"
            android:textSize="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="27dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="5dp"
                android:text="@string/corso"
                android:textSize="20dp"
                android:id="@+id/textView2" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="5dp"
            android:textSize="20dp"
            android:text="@string/indirizzo"
            android:id="@+id/address"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="5dp"
            android:textSize="20dp"
            android:text="@string/num_tel"
            android:id="@+id/numerotelefono"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingEnd="10dp">

            <Button
                style="@android:style/Holo.ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vai"
                android:textColor="@color/colorPrimary"
                android:textSize="17dp"
                android:id="@+id/go_btn" />

            <Button
                style="@android:style/Holo.ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chiama"
                android:textColor="@color/colorPrimary"
                android:textSize="17dp"
                android:id="@+id/call_btn"/>






        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/whith"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="5dp"
            android:text="@string/tit"
            android:textSize="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="27dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:paddingStart="5dp"
                android:text="@string/sot"
                android:textSize="20dp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:padding="5dp"
            android:text="@string/lorem" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="end"
            android:orientation="vertical"
            android:paddingEnd="10dp">

            <Button
                android:id="@+id/button"
                style="@android:style/Holo.ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leggi"
                android:textColor="@color/colorPrimary"
                android:textSize="17dp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
