<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:background="@color/background">

    <LinearLayout
        android:background="@color/whith"
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tit"
            android:textSize="30dp"
            android:layout_gravity="start"
            android:padding="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="27dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:text="@string/sot"
                android:textSize="20dp"
                android:paddingStart="5dp"/>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:text="@string/lorem"
            android:padding="5dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingEnd="10dp">

            <Button
                style="@android:style/Holo.ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="17dp"
                android:text="@string/leggi" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:background="@color/whith"
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tit"
            android:textSize="30dp"
            android:layout_gravity="start"
            android:padding="5dp"
            android:id="@+id/textView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="27dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:text="@string/sot"
                android:textSize="20dp"
                android:paddingStart="5dp"/>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:text="@string/lorem"
            android:padding="5dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="end"
            android:paddingEnd="10dp">

            <Button
                style="@android:style/Holo.ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="17dp"
                android:text="@string/leggi"
                android:id="@+id/button" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
